--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,8 +17,8 @@ RUN apt-get update && apt-get install -y \
 COPY --from=composer:2.6 /usr/bin/composer /usr/bin/composer
 
 # # Copy wait-for-mysql
-# COPY wait-for-mysql.sh /wait-for-mysql.sh
-# RUN chmod +x /wait-for-mysql.sh
+COPY wait-for-mysql.sh /wait-for-mysql.sh
+RUN chmod +x /wait-for-mysql.sh
 
 WORKDIR /var/www
 
