--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,5 +50,17 @@ services:
     depends_on:
       - backend
 
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
 volumes:
   db_data:
+  jenkins_home:
