--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,9 @@ services:
     container_name: antoree-backend
     restart: always
     working_dir: /var/www
-    volumes:
-      - ./backend:/var/www
+    volumes: 
+      # - ./backend:/var/www local
+      - /mnt/d/Antoree/backend:/var/www
     environment:
       DB_CONNECTION: mysql
       DB_HOST: mysql
@@ -44,7 +45,8 @@ services:
     restart: always
     working_dir: /app
     volumes:
-      - ./frontend:/app
+      # - ./frontend:/app local
+      - /mnt/d/Antoree/frontend:/app
     ports:
       - "3000:3000"
     depends_on:
