--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,10 @@ services:
       retries: 5
 
   backend:
-    build:
-      context: ./backend
+    image: laravel-app
     container_name: antoree-backend
     restart: always
     working_dir: /var/www
-    volumes: 
-      # - ./backend:/var/www local
-      - /mnt/d/Antoree/backend:/var/www
     environment:
       DB_CONNECTION: mysql
       DB_HOST: mysql
@@ -39,14 +35,10 @@ services:
       - "9000:9000"
 
   frontend:
-    build:
-      context: ./frontend
+    image: antoree-frontend-app
     container_name: antoree-frontend
     restart: always
     working_dir: /app
-    volumes:
-      # - ./frontend:/app local
-      - /mnt/d/Antoree/frontend:/app
     ports:
       - "3000:3000"
     depends_on:
