--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,4 +33,4 @@ RUN chmod 600 /var/www/storage/oauth-private.key || true \
     && chmod 600 /var/www/storage/oauth-public.key || true
 
 EXPOSE 9000
-CMD ["/wait-for-mysql.sh", "php", "artisan", "serve", "--host=0.0.0.0", "--port=9000"]
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=9000"]
