--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,5 +33,5 @@ RUN chmod 600 /var/www/storage/oauth-private.key || true \
     && chmod 600 /var/www/storage/oauth-public.key || true
 
 EXPOSE ${PORT}
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port", "${PORT}"]
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=${PORT}"]
 
