--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,5 +33,5 @@ RUN chmod 600 /var/www/storage/oauth-private.key || true \
     && chmod 600 /var/www/storage/oauth-public.key || true
 
 EXPOSE 9000
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port", "${PORT:-9000}"]
+CMD sh -c 'php artisan serve --host=0.0.0.0 --port=${PORT:-9000}'
 
