Update create key for passport

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,6 +28,9 @@ RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
 RUN chmod 600 /var/www/storage/oauth-private.key || true \
     && chmod 600 /var/www/storage/oauth-public.key || true
 
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 EXPOSE 10000
-CMD sh -c 'php artisan serve --host=0.0.0.0 --port=${PORT:-10000}'
+CMD ["/entrypoint.sh"]
 
